UWM-BASE: IE11 fix - size the heart icon on med specialties teasers and intro cards with px, not rems, so it is not cut off

--- a/docroot/themes/custom/uwmbase/components/card/card.scss
+++ b/docroot/themes/custom/uwmbase/components/card/card.scss
@@ -197,7 +197,7 @@
 
       background-image: url('/themes/custom/uwmbase/dist/assets/uwm-icons/icon_heart_light_gray.svg');
       background-position: left center;
-      background-size: 1.375rem 1.375rem; // 22px
+      background-size: 22px 22px;
       background-repeat: no-repeat;
     }
 
