--- a/docroot/themes/custom/uwmbase/components/view-medical-specialties-for-services/view-medical-specialties-for-services.scss
+++ b/docroot/themes/custom/uwmbase/components/view-medical-specialties-for-services/view-medical-specialties-for-services.scss
@@ -31,8 +31,8 @@
       padding: 0;
 
       .uwm-icon {
-        width: 1.375rem; // 22px
-        height: 1.375rem; // 22px
+        width: 22px;
+        height: 22px;
         vertical-align: middle;
         margin-right: 0.75rem; // 12px
       }
